proyectos y kanban con sesion

--- a/src/app/_modals/homeworks/homework/homework.component.html
+++ b/src/app/_modals/homeworks/homework/homework.component.html
@@ -41,9 +41,8 @@
                 <div class="form-group">
                   <label>Asignado</label>
                   <select [ngModel]="asignado" (ngModelChange)="onChangeObj($event)" name="asignado" class="form-control">
-                    <option [ngValue]="user" *ngFor="let user of asignados">{{user.name}} {{user.fatherLastName}}</option>
+                    <option [ngValue]="user" *ngFor="let user of asignados">{{user.nickname}}</option>
                   </select>
-
                 </div>
               </div>
           </div>
