--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,76 +1,10 @@
 <app-maincontainer>
 <div class="main-content" >
   <div class="container-fluid">
+        <pre>
+                {{profile | json}}
+            </pre>
       <div class="row">
-          <div class="col-md-8">
-              <div class="card">
-                  <div class="header">
-                      <h4 class="title">Editar Perfil</h4>
-                      <pre>
-                          {{profile | json}}
-                      </pre>
-                  </div>
-                  <div class="content">
-                      <form>
-                          <div class="row">
-                              <div class="col-md-4">
-                                  <div class="form-group">
-                                      <label>Nickname</label>
-                                      <input type="text" class="form-control" placeholder="Nickname" value="cpascaccio123">
-                                  </div>
-                              </div>
-                              <div class="col-md-8">
-                                  <div class="form-group">
-                                      <label for="exampleInputEmail1">Correo Electrónico</label>
-                                      <input type="email" class="form-control" placeholder="Correo Electónico">
-                                  </div>
-                              </div>
-                          </div>
-
-                          <div class="row">
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label>Nombre (s)</label>
-                                    <input type="text" class="form-control" placeholder="Nombre" value="Cuahutemoc" required>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label>Appellido Paterno</label>
-                                    <input type="text" class="form-control" placeholder="Appellido Paterno" value="Pascaccio">
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                              <div class="form-group">
-                                  <label>Appellido Materno</label>
-                                  <input type="text" class="form-control" placeholder="Appellido Materno" value="Torres">
-                              </div>
-                            </div>
-                          </div>
-
-                          <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>Contraseña</label>
-                                    <input type="pass" class="form-control" placeholder="Contraseña" required>
-                                </div>
-                            </div>
-                          </div>
-
-                          <div class="row">
-                              <div class="col-md-12">
-                                  <div class="form-group">
-                                      <label>Sobre mí</label>
-                                      <textarea rows="5" class="form-control" placeholder="Aquí puedes escribir una descripcion breve sobre tí." value="">Estudiante de ultimos semestres de ingenieria en sistemas de la escuela superior de computo.</textarea>
-                                  </div>
-                              </div>
-                          </div>
-                          <button type="submit" class="btn btn-info btn-fill pull-right">Editar Perfil</button>
-                          <div class="clearfix"></div>
-                      </form>
-                  </div>
-              </div>
-          </div>
           <div class="col-md-4">
               <div class="card card-user">
                   <div class="image">
@@ -80,7 +14,7 @@
                       <div class="author">
                           <a>
                               <div *ngIf="!profile" class="avatar border-gray">
-                                CP
+                                
                               </div>
 
                               <img *ngIf="profile" src="{{profile.picture}}" class="avatar border-gray"/>
@@ -94,20 +28,51 @@
                               <h4 *ngIf="profile" class="title">{{profile.name}}<br />
                                 <small>{{profile.nickname}}</small>
                             </h4>
-
-
-
                           </a>
                       </div>
                       <p class="description text-center"> "Estudiante de ultimos semestres de ingenieria en sistemas de la escuela superior de computo."</p>
                       <hr>
                   <div class="text-center">
-                      <button class="btn btn-simple">25 <i class="fa fa-cloud-download"></i></button>
-                      <button class="btn btn-simple">12 <i class="fa fa-cloud-upload"></i></button>
+                      <button class="btn btn-simple">{{ndownloads}} <i class="fa fa-cloud-download"></i></button>
+                      <button class="btn btn-simple">{{nuploads}} <i class="fa fa-cloud-upload"></i></button>
                   </div>
                   </div>
               </div>
           </div>
+          <div class="col-md-8">
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Editar Perfil</h4>
+                    </div>
+                    <div class="content">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label>Nickname</label>
+                                        <input type="text" class="form-control" placeholder="Nickname" value="{{profile.nickname}}">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                  <div class="form-group">
+                                      <label>Nombre (s)</label>
+                                      <input type="text" class="form-control" placeholder="Nombre" value="Cuahutemoc" value="{{profile.name}}" required>
+                                  </div>
+                              </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>Sobre mí</label>
+                                        <textarea rows="5" class="form-control" placeholder="Aquí puedes escribir una descripcion breve sobre tí." value="">Estudiante de ultimos semestres de ingenieria en sistemas de la escuela superior de computo.</textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
       </div>
   </div>
 </div>
