--- a/src/app/proyectdetails/proyectdetails.component.html
+++ b/src/app/proyectdetails/proyectdetails.component.html
@@ -16,38 +16,27 @@
                               </div>
                           </div>
                           <div class="content table-responsive table-full-width">
-                            <table class="table table-hover table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Nombre</th>
-                                        <th *ngFor="let cell of tableData1.headerRow" style="text-align:center">{{ cell }}</th>
-                                    </tr>
-                                </thead>
+                            <table id="myTable" class="table table-hover table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Nombre</th>
+                                            <th>Tipo</th>
+                                            <th>Tamaño</th>
+                                            <th>Creado</th>                                
+                                            <th>Ver</th>                                
+                                            <th>Editar</th>                                
+                                            <th>Eliminar</th>                                                          
+                                        </tr>
+                                    </thead>
                                 <tbody>
-                                    <tr *ngFor="let row of cuerpoFolder" style="text-align:center">
-                                        <td *ngIf="row.idFolder!=undefined" style="text-align:left">
-                                          <i class="fa fa-file-code-o"></i> {{row.name}}                                            
-                                        </td>
-                                        <td *ngIf="row.idFolder==undefined" style="text-align:left">
-                                          <i class="fa fa-folder-o"></i> {{row.name}}
-                                        </td>
-                                        <td>
-                                          <span *ngIf="row.type==undefined">Folder</span> 
-                                          <span *ngIf="row.type!=undefined">{{row.type}}</span> 
-                                        </td>
+                                    <tr *ngFor="let row of cuerpoFolder">
+                                        <td style="text-align:left"><span *ngIf="row.idFolder!=undefined"><i class="fa fa-file-code-o"></i> {{row.name}}</span><span *ngIf="row.idFolder==undefined"><i class="fa fa-folder-o"></i> {{row.name}}</span></td>
+                                        <td><span *ngIf="row.type==undefined">Folder</span><span *ngIf="row.type!=undefined">{{row.type}}</span></td>
                                         <td>{{row.size}}</td>
                                         <td>{{row.fechaCreacion | date:'dd MMM'}}</td>
-                                        <td>
-                                          <button class="btn btn-simple btn-icon" *ngIf="row.idFolder!=undefined" (click)="abrirArchivo(row.id)"><i class="fa fa-eye"></i></button>
-                                          <button class="btn btn-simple btn-icon" *ngIf="row.idFolder==undefined" (click)="abrirCarpeta(row.id)"><i class="fa fa-eye"></i></button>
-                                          <button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button>
-                                          <button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button>                                      
-                                        </td>
-                                    </tr>
-                                    <tr *ngIf="cuerpoFolder.length==0 && folder!=undefined">
-                                        <td colspan="5" style="text-align:center"> 	
-                                            <i class="fa fa-minus-circle"></i>
-                                             No hay archivos que mostrar en la carpeta {{folder.name}}</td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" *ngIf="row.idFolder!=undefined" (click)="abrirArchivo(row.id)"><i class="fa fa-eye"></i></button><button class="btn btn-simple btn-icon" *ngIf="row.idFolder==undefined" (click)="abrirCarpeta(row.id)"><i class="fa fa-eye"></i></button></td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button></td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button> </td>
                                     </tr>
                                 </tbody>
                             </table>
