--- a/src/app/proyects/proyects.component.html
+++ b/src/app/proyects/proyects.component.html
@@ -13,40 +13,40 @@
                             <button class="btn btn_large" data-toggle="modal" data-target="#newProyecto"><i class="fa fa-plus"></i> Crear Nuevo Proyecto</button>
                             </div>
                         </div>
-                        <div class="content table-responsive table-full-width"> <br/>
-                                <table class="table table-hover table-striped">
+                        <div class="content table-responsive table-full-width"> 
+
+                            <table id="myTable" class="table table-hover table-striped">
                                     <thead>
                                         <tr>
                                             <th>ID</th>
                                             <th>Nombre</th>
-                                            <th style="text-align:center" *ngFor="let cell of tableData1.headerRow">{{ cell }}</th>
+                                            <th>Fecha de Creacion</th>
+                                            <th>Estatus</th>
+                                            <th>Kanban</th>                                
+                                            <th>Ver</th>                                
+                                            <th>Editar</th>                                
+                                            <th>Eliminar</th>                                
+                                            <th>Análisis</th>                                
+                                            <th>Bugs</th>                                
+                                            <th>Compartir</th>                                
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr *ngFor="let row of proyectos; let i = index">
-                                            <td>{{i+1}}</td>
-                                            <td>{{row.title}}</td>
-                                            <td style="text-align:center">{{row.fechaModificacion | date:'mediumDate'}}</td>
-                                            <td style="text-align:center">{{row.status}}</td>
-                                            <td style="text-align:center">
-                                                <button class="btn btn-simple btn-icon" (click)="verKanban(row.id)"><i class="fa fa-check-square-o"></i> Kanban</button>
-                                                <button class="btn btn-simple btn-icon" (click)="verDetalle(row.id)"><i class="fa fa-eye"></i></button>
-                                                <button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button>
-                                                <button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button>                                      
-                                                <button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verGraficas(row.id)"><i class="fa fa-line-chart"></i></button>
-                                                <button *ngIf="!row.sonar" class="btn btn-simple btn-icon" (click)="addSonar(row.id)"><i class="fa fa-search-plus"></i></button>
-                                                <button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verIssues(row.id)"><i class="fa fa-bug"></i></button>                                      
-                                                <button *ngIf="!row.sonar" class="btn btn-simple btn-icon" disabled><i class="fa fa-bug"></i></button>                  
-                                                <button class="btn btn-simple btn-icon" (click)="newPerson(row.users,row.id)" data-toggle="modal" data-target="#newPerson"><i class="fa fa-users"></i></button>                                                                  
-                                            </td>
-                                        </tr>
-                                        <tr *ngIf="proyectos==null || proyectos.length==0">
-                                            <td colspan="5" style="text-align:center"> 	
-                                                <i class="fa fa-minus-circle"></i>
-                                                    No tiene ningun proyecto creado</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <tbody>
+                                    <tr *ngFor="let row of proyectos; let i = index">
+                                        <td>{{i+1}}</td>
+                                        <td>{{row.title}}</td>
+                                        <td style="text-align:center">{{row.fechaModificacion | date:'mediumDate'}}</td>
+                                        <td style="text-align:center">{{row.status}}</td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verKanban(row.id)"><i class="fa fa-check-square-o"></i></button></td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verDetalle(row.id)"><i class="fa fa-eye"></i></button></td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button></td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button> </td>
+                                        <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verGraficas(row.id)"><i class="fa fa-line-chart"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" (click)="addSonar(row.id)"><i class="fa fa-search-plus"></i></button></td>
+                                        <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verIssues(row.id)"><i class="fa fa-bug"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" disabled><i class="fa fa-bug"></i></button></td>
+                                        <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="newPerson(row.users,row.id)" data-toggle="modal" data-target="#newPerson"><i class="fa fa-users"></i></button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
