--- a/src/app/buys/buys.component.html
+++ b/src/app/buys/buys.component.html
@@ -7,39 +7,52 @@
                   <div class="header">
                     <div class="header_left">
                       <h4 class="title">Compras</h4>
-                      <p class="category"><i class="fa fa-window-maximize"></i> Tablero kanban del proyecto</p>
-                    </div>
-                    <div class="header_right">
-                      <button class="btn btn_large" data-toggle="modal" data-target="#newProyecto"><i class="fa fa-plus"></i> Crear Nuevo Proyecto</button>
-                      <button class="btn btn_large" data-toggle="modal" data-target="#uploadProyecto"><i class="fa fa-cloud-upload"></i> Subir Nuevo Proyecto</button>
+                      <p class="category"> Todas las descargas realizadas apareceran en esta sección.</p>
                     </div>
                   </div>
-                  <div class="content table-responsive table-full-width">
-                        <table class="table table-hover table-striped">
-                              <thead>
-                                  <tr>
-                                      <th *ngFor="let cell of tableData1.headerRow">{{ cell }}</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr *ngFor="let row of tableData1.dataRows; let i = index">
-                                      <td>{{i+1}}</td>
-                                      <td *ngFor="let cell of row">{{cell}}</td>
-                                      <td>
-                                        <button class="btn btn-simple btn-icon" routerLink="/canvas"><i class="fa fa-check-square-o"></i></button>
-                                        <button class="btn btn-simple btn-icon" routerLink="/proyectDetails"><i class="fa fa-eye"></i></button>
-                                        <button class="btn btn-simple btn-icon" data-toggle="modal" data-target="#newProyecto"><i class="fa fa-edit"></i></button>
-                                        <button class="btn btn-simple btn-icon"><i class="fa fa-cloud-download"></i></button>
-                                        <button class="btn btn-simple btn-icon"><i class="fa fa-bug"></i></button>
-                                        <button class="btn btn-simple btn-icon" data-toggle="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button>                                      
-                                      </td>
-                                  </tr>
-                              </tbody>
-                        </table>
-                  </div>
+                  <div class="content table-responsive table-full-width"> 
+                    <table id="myTable" class="table table-hover table-striped">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Nombre</th>
+                                    <th>Fecha de Creacion</th>
+                                    <th>Estatus</th>
+                                    <th>Kanban</th>                                
+                                    <th>Ver</th>                                
+                                    <th>Editar</th>                                
+                                    <th>Eliminar</th>                                
+                                    <th>Análisis</th>                                
+                                    <th>Bugs</th>                                
+                                    <th>Compartir</th>                                
+                                    <th>Valor</th>                                
+                                </tr>
+                            </thead>
+                        <tbody>
+                            <tr *ngFor="let row of proyectos; let i = index">
+                                <td>{{i+1}}</td>
+                                <td>{{row.title}}</td>
+                                <td style="text-align:center">{{row.fechaModificacion | date:'mediumDate'}}</td>
+                                <td style="text-align:center">{{row.status}}</td>
+                                <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verKanban(row.id)"><i class="fa fa-check-square-o"></i></button></td>
+                                <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verDetalle(row.id)"><i class="fa fa-eye"></i></button></td>
+                                <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button></td>
+                                <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button> </td>
+                                <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verGraficas(row.id)"><i class="fa fa-line-chart"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" (click)="addSonar(row.id)"><i class="fa fa-search-plus"></i></button></td>
+                                <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verIssues(row.id)"><i class="fa fa-bug"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" disabled><i class="fa fa-bug"></i></button></td>
+                                <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="newPerson(row.users,row.id)" data-toggle="modal" data-target="#newPerson"><i class="fa fa-share"></i></button></td>
+                                <td style="text-align:center">
+                                    <button *ngIf="row.price==undefined" class="btn btn-simple btn-icon" (click)="assessment(row.id)"><i class="fa fa-usd"></i> Valorar</button>
+                                    <span *ngIf="row.price!=undefined">${{row.price}} YP</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
               </div>
           </div>
       </div>
   </div>
 </div>
+<div class="loader" *ngIf="blockLoader"></div>
 </app-maincontainer>
