--- a/src/app/buys/buys.component.html
+++ b/src/app/buys/buys.component.html
@@ -29,11 +29,11 @@
                                 </tr>
                             </thead>
                         <tbody>
-                            <tr *ngFor="let row of proyectos; let i = index">
+                            <tr *ngFor="let row of buys; let i = index">
                                 <td>{{i+1}}</td>
-                                <td>{{row.title}}</td>
-                                <td style="text-align:center">{{row.fechaModificacion | date:'mediumDate'}}</td>
-                                <td style="text-align:center">{{row.status}}</td>
+                                <td>{{row.proyect.title}}</td>
+                                <td style="text-align:center">{{row.proyect.fechaModificacion | date:'mediumDate'}}</td>
+                                <td style="text-align:center">{{row.proyect.status}}</td>
                                 <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verKanban(row.id)"><i class="fa fa-check-square-o"></i></button></td>
                                 <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verDetalle(row.id)"><i class="fa fa-eye"></i></button></td>
                                 <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button></td>
@@ -43,7 +43,7 @@
                                 <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="newPerson(row.users,row.id)" data-toggle="modal" data-target="#newPerson"><i class="fa fa-share"></i></button></td>
                                 <td style="text-align:center">
                                     <button *ngIf="row.price==undefined" class="btn btn-simple btn-icon" (click)="assessment(row.id)"><i class="fa fa-usd"></i> Valorar</button>
-                                    <span *ngIf="row.price!=undefined">${{row.price}} YP</span>
+                                    <span *ngIf="row.price!=undefined">${{row.proyect.price}} YP</span>
                                 </td>
                             </tr>
                         </tbody>
