--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-4" *ngFor="let proy of proys">
                 <div class="card">
-                    <a href="#">
+                    <a href="{{proy.url}}" target="_blank">
                         <img class="card-img-top" src="assets/img/{{proy.img}}" alt="Card image cap">
                     </a>
                     <div class="card-body">
