--- a/src/app/market/market.component.scss
+++ b/src/app/market/market.component.scss
@@ -11,6 +11,12 @@
     width: 100%;
 }
 
+.form-control{
+    margin-top: 18px;
+    margin-bottom: 20px;
+    height: 47px;
+}
+
 .card-body {
     padding: 10px 20px 10px 20px;
 }
