--- a/src/app/marketdetail/marketdetail.component.html
+++ b/src/app/marketdetail/marketdetail.component.html
@@ -1,4 +1,5 @@
 <app-maincontainer>
+
   <div class="container">
 		<div class="card">
 			<div class="preview col-md-6">
@@ -29,7 +30,7 @@
 		</h5>-->
 				<h5 class="sizes"></h5>
 				<div class="action">
-					<button class="add-to-cart btn btn-default" type="button">Obtener</button>
+					<button class="btn btn-primary" type="button">Obtener</button>
 				</div>
 			</div>
 		</div>
