--- a/src/app/movements/movements.component.html
+++ b/src/app/movements/movements.component.html
@@ -6,12 +6,8 @@
                     <div class="card">
                         <div class="header">
                         <div class="header_left">
-                            <h4 class="title">Movimientos</h4>
-                            <p class="category"><i class="fa fa-window-maximize"></i> Tablero kanban del proyecto</p>
-                        </div>
-                        <div class="header_right">
-                            <button class="btn btn_large" data-toggle="modal" data-target="#newProyecto"><i class="fa fa-plus"></i> Crear Nuevo Proyecto</button>
-                            <button class="btn btn_large" data-toggle="modal" data-target="#uploadProyecto"><i class="fa fa-cloud-upload"></i> Subir Nuevo Proyecto</button>
+                            <h4 class="title">Notificaciones</h4>
+                            <p class="category">Todas las acciones realizadas</p>
                         </div>
                         </div>
                         <div class="content table-responsive table-full-width"> 
