--- a/src/app/proyects/proyects.component.html
+++ b/src/app/proyects/proyects.component.html
@@ -47,7 +47,8 @@
                                         <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verIssues(row.id)"><i class="fa fa-bug"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" disabled><i class="fa fa-bug"></i></button></td>
                                         <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="newPerson(row.users,row.id)" data-toggle="modal" data-target="#newPerson"><i class="fa fa-share"></i></button></td>
                                         <td style="text-align:center">
-                                            <button  class="btn btn-simple btn-icon" (click)="assessment(row.id)"><i class="fa fa-usd"></i> Valorar</button>
+                                            <button *ngIf="!row.sonar && row.price==undefined" class="btn btn-simple btn-icon" (click)="assessment(row.id)" disabled><i class="fa fa-usd"></i> Valorar</button>
+                                            <button *ngIf="row.price==undefined && row.sonar" class="btn btn-simple btn-icon" (click)="assessment(row.id)"><i class="fa fa-usd"></i> Valorar</button>
                                             <span *ngIf="row.price!=undefined">${{row.price}} SP</span>
                                         </td>
                                     </tr>
