Simbolo Software Points

--- a/src/app/market/market.component.html
+++ b/src/app/market/market.component.html
@@ -15,7 +15,7 @@
                     <div class="card-body">
                         <p class="card-title">{{proy.title}}</p>
                         <p class="card-text">{{proy.desc}}</p>
-                        <p class="card-text" id="price">{{proy.points}} SP</p>
+                        <p class="card-text" id="price">{{proy.points}} <img id="sp" src="assets/img/sp.png"></p>
                         <a routerLink="/marketdetail/{{proy.id}}" class="btn btn-primary" id="bot">Ver más</a>
                     </div>
                     <div class="card-body">
