--- a/src/app/marketdetail/marketdetail.component.html
+++ b/src/app/marketdetail/marketdetail.component.html
@@ -21,7 +21,7 @@
 					<span class="review-no">7 descargas</span>
 				</div>
 				<p class="product-description">{{mProy.desc}}</p>
-				<h4 class="price">Obtener: <span>{{mProy.points}} SP</span></h4>
+				<h4 class="price">Obtener: <span>{{mProy.points}} </span><img id="sp" src="assets/img/sp.png"></h4>
 					<!--<h5 class="sizes">sizes:
 						<span class="size" data-toggle="tooltip" title="small">s</span>
 						<span class="size" data-toggle="tooltip" title="medium">m</span>
