--- a/src/app/market/market.component.scss
+++ b/src/app/market/market.component.scss
@@ -1,10 +1,21 @@
 .card{
     //width: 300px;
+    max-width: 300px;
 }
 
 .card-img-top {
     width: 100%;
     height: 180px;
+}
+
+#sp{
+    width: 22px;
+    vertical-align: text-top;
+  }
+
+.card-text{
+    //overflow: hidden;
+    //max-width: 10ch;
 }
 
 .container{
