--- a/src/app/market/market.component.scss
+++ b/src/app/market/market.component.scss
@@ -1,6 +1,6 @@
 .card{
     //width: 300px;
-    max-width: 300px;
+    max-width: 100%;
 }
 
 .card-img-top {
@@ -38,6 +38,7 @@
 
 #price{
     text-align: right;
+    font-size: 20px;
 }
 
 #bot{
@@ -126,4 +127,8 @@
   .btn-primary:active, .btn-primary.active {
       background: #007299;
       box-shadow: none;
+  }
+
+  .tag-market{
+      margin-right: 10px;
   }
