--- a/src/app/marketdetail/marketdetail.component.html
+++ b/src/app/marketdetail/marketdetail.component.html
@@ -1,36 +1,37 @@
 <app-maincontainer>
-
   <div class="container">
-		<div class="card">
-			<div class="preview col-md-6">
-				<!--<div class="preview-pic tab-content">
-					<div class="tab-pane active" id="pic-1"></div>
-				</div>	-->
-				<img src="assets/img/{{mProy.img}}" />
-			</div>
-			<div class="details col-md-6">
-				<h3 class="product-title">{{mProy.title}}</h3>
-				<div class="rating">
-					<div class="stars">
-						<span class="fa fa-star checked"></span>
-						<span class="fa fa-star checked"></span>
-						<span class="fa fa-star checked"></span>
-						<span class="fa fa-star checked"></span>
-						<span class="fa fa-star"></span>
-					</div>
-					<span class="review-no">7 descargas</span>
+		<div class="col-md-12">
+			<div class="card">
+				<div class="preview col-md-6">
+					<!--<div class="preview-pic tab-content">
+						<div class="tab-pane active" id="pic-1"></div>
+					</div>	-->
+					<img src="assets/img/{{mProy.img}}" />
 				</div>
-				<p class="product-description">{{mProy.desc}}</p>
-				<h4 class="price">Obtener: <span>{{mProy.points}} </span><img id="sp" src="assets/img/sp.png"></h4>
-					<!--<h5 class="sizes">sizes:
-						<span class="size" data-toggle="tooltip" title="small">s</span>
-						<span class="size" data-toggle="tooltip" title="medium">m</span>
-						<span class="size" data-toggle="tooltip" title="large">l</span>
-						<span class="size" data-toggle="tooltip" title="xtra large">xl</span>
-		</h5>-->
-				<h5 class="sizes"></h5>
-				<div class="action">
-					<button class="btn btn-primary" type="button">Obtener</button>
+				<div class="details col-md-6">
+					<h3 class="product-title">{{mProy.title}}</h3>
+					<div class="rating">
+						<div class="stars">
+							<span class="fa fa-star checked"></span>
+							<span class="fa fa-star checked"></span>
+							<span class="fa fa-star checked"></span>
+							<span class="fa fa-star checked"></span>
+							<span class="fa fa-star"></span>
+						</div>
+						<span class="review-no">7 descargas</span>
+					</div>
+					<p class="product-description">{{mProy.desc}}</p>
+					<h4 class="price">Obtener: <span>{{mProy.points}} </span><img id="sp" src="assets/img/sp.png"></h4>
+						<!--<h5 class="sizes">sizes:
+							<span class="size" data-toggle="tooltip" title="small">s</span>
+							<span class="size" data-toggle="tooltip" title="medium">m</span>
+							<span class="size" data-toggle="tooltip" title="large">l</span>
+							<span class="size" data-toggle="tooltip" title="xtra large">xl</span>
+			</h5>-->
+					<h5 class="sizes"></h5>
+					<div class="action">
+						<button class="btn btn-primary" type="button">Obtener</button>
+					</div>
 				</div>
 			</div>
 		</div>
