--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -1,27 +1,16 @@
 <app-maincontainer>
     <div class="container">
-<<<<<<< HEAD
-        <div class="row">
-                <!--<button class="btn btn_large" data-toggle="modal" data-target="#newHelp"><i class="fa fa-plus"></i> Crear Nuevo Proyecto</button>-->
-            <div class="col-md-4" *ngFor="let proy of proys">
-                <div class="card">
-                    <a href="{{proy.url}}" target="_blank">
-                        <img class="card-img-top" src="assets/img/{{proy.img}}" alt="Card image cap">
-                    </a>
-                    <div class="card-body" >
-                        {{proy.title}}
-=======
         <div class="col-md-12">
             <div class="row">
+                    <!--<button class="btn btn_large" data-toggle="modal" data-target="#modal-video"><i class="fa fa-plus"></i> Crear Nuevo Proyecto</button>-->
                 <div class="col-md-4" *ngFor="let proy of proys">
                     <div class="card">
-                        <a href="{{proy.url}}" target="_blank">
+                        <a href="javascript:" (click)="openModal(proy.url)" data-toggle="modal" data-target="#modal-video" >
                             <img class="card-img-top" src="assets/img/{{proy.img}}" alt="Card image cap">
                         </a>
                         <div class="card-body">
                             {{proy.title}}
                         </div>
->>>>>>> 072a3ebb948e8aa41eac68a909090d45b8fccf77
                     </div>
                 </div>
             </div>
@@ -29,12 +18,21 @@
     </div>
 </app-maincontainer>
 
-<div class="modal fade" id="newHelp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-backdrop="static" aria-hidden="true" align="center">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header" align="center">
-              <p>HOLA</p>
+<div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="modal-video-label">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-          </div>
+            <div class="modal-body">
+                <div class="modal-video">
+                    <div class="embed-responsive embed-responsive-16by9">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/EgFFAeG5BBQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
+</div>
